Regenarate all clients as per latest.